@@ -1,4 +1,4 @@
 DIST rjb-1.3.4.gem 61440 RMD160 ce0a37cf50508e51e41a9a04260dcab955f97683 SHA1 801c69f2d2c4a638acfa06342a6ded4af2e2ffab SHA256 f756a152130a2ac28e7d50d8dbbf766e03df635b6a513e31de3f2850f0d5abc5
-EBUILD rjb-1.3.4-r1.ebuild 972 RMD160 2ea98fe87a95ccaebb731f55ddb38352623a40d4 SHA1 f100e1e75c6403d81d4bd5ddf277a3b7a4724b84 SHA256 5d436a1174dadc906488d46a5031c2e946d6d263d5f26cf364fd9fa5da2871ea
-MISC ChangeLog 745 RMD160 13101b78157fbf9e7ed158be2e630783829dd0ff SHA1 8f99eae46ac9cf516a01caa401b55c4da4929635 SHA256 0e3f94c291cf9a0be1ef4b28f4e0ffa1071540d466a0fdb9d9b2a7447a7b8135
+EBUILD rjb-1.3.4-r1.ebuild 987 RMD160 ca8bd791d3dbc8b777347fcba02a8fa7358cc6d4 SHA1 343e000f8c7c56102d949b05ab778f4ed9ee8fda SHA256 d8ddc804cf47f113a6bb42eaf7bdacb84d9e57b0e55782a44bea6d8a032343d6
+MISC ChangeLog 875 RMD160 b2d284ebaa99f62702a422bd89f550c2fc30d01e SHA1 c67faac37598ebfc8e306514fc8ec45a9fab6709 SHA256 7d0924eb52a53d8a1bf0d2c8395b0118fd844a99a66e362e22159f54a9dcfc04
 MISC metadata.xml 221 RMD160 52dde43b09fd52c7fca2d101da4536746167b29f SHA1 ce96a105913fc721fb928a0d8216b11fa387b869 SHA256 d114187ee5bb84d05e5d0654deb9148f2b4100c127266eca82b49ba011941616
