@@ -3,6 +3,9 @@
 # $Header: $
 
   24 Jan 2011; Dean Matzkov <bapabooiee@gmail.com> rjb-1.3.4-r1.ebuild:
+  The JAVA_HOME variable is now set using java-config-2.
+
+  24 Jan 2011; Dean Matzkov <bapabooiee@gmail.com> rjb-1.3.4-r1.ebuild:
   Added USE flag to install example files.
 
   24 Jan 2011; Dean Matzkov <bapabooiee@gmail.com> rjb-1.3.4-r1.ebuild:
